recipe-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml -f docker-compose.local.yml convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: recipe-app
  name: recipe-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: recipe-app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yml -f docker-compose.local.yml convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: recipe-app
    spec:
      containers:
        - env:
            - name: DB_HOST
              value: recipe-db
            - name: DB_NAME
              value: recipedb
            - name: DB_PASSWORD
              value: b74z0lIXfM8Qh0wL
            - name: DB_PORT
              value: "3306"
            - name: DB_USER
              value: recipeapp
            - name: REL_BASE_URL
              value: http://localhost:8080
          image: chris132/recipe-app:latest
          name: recipe-app
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
