recipe-next-app.service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: recipe-next-app
  name: recipe-next-app
spec:
  type: ClusterIP
  ports:
    - name: "http"
      port: 80
      targetPort: 3000
  selector:
    app: recipe-next-app
