recipe-website.service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: recipe-website
  name: recipe-website
spec:
  type: ClusterIP
  ports:
    - name: "http"
      port: 80
      targetPort: 80
  selector:
    app: recipe-website
