nginx.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: api.recipeez.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recipe-app
                port:
                  number: 80
    - host: logs.recipeez.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
